# agent_tools_converter

./: AGENTS.md  README.md  pyproject.toml
agent_tools_converter/: __init__.py  __main__.py  cli.py  models.py
agent_tools_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agent_tools_converter/converters/: agent_converter.py  base.py  command_converter.py  factory.py  skill_converter.py
agent_tools_converter/utils/: file_walker.py  frontmatter.py
openspec/changes/archive/2026-05-08-skills-commands-converter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-skills-commands-converter/specs/cli-interface/: spec.md
openspec/changes/archive/2026-05-08-skills-commands-converter/specs/frontmatter-parsing/: spec.md
openspec/changes/archive/2026-05-08-skills-commands-converter/specs/tool-conversion/: spec.md
tests/: test_cli.py  test_converters.py  test_file_walker.py  test_frontmatter.py  test_models.py
